reading guide van groepsproject af!!!

--- a/group.html
+++ b/group.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Individual Project</title>
+  <title>Group Project</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <link rel="icon" href="./images/LogoTijn.png">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -36,14 +36,14 @@
   <main class="product-main">
     <section id="welcome" class="product-intro">
       <h1 class="product-heading">GROUP PROJECT</h1>
-      <p class="product-text">Page containing all content related to the group project, which has been carried out during sixteen weeks of the semester.</p>
+      <p class="product-text">Page containing all content related to the group project, which has been carried out during twelve weeks of the semester.</p>
     </section>
   </main>
   <main class="lees">
         <div class="width">
             <h2 class="guide-title">READING GUIDE</h2>
             <p class="desc">
-                Welcome to the reading guide of the individual project for this semester! In this reading guide, various topics will be discussed, including the project, process, reflection and evaluation.
+                Welcome to the reading guide of the group project for this semester! In this reading guide, various topics will be discussed, including the project, process, reflection and evaluation.
                 At the bottom of this reading guide, you will find a proof section containing all deliverables related to this project. These deliverables have certain learning outcomes attached to them, which
                 are visisble when hovering over said deliverables. The deliverables from this project, and all other projects are also directly accessible from the competence table on the homepage. The difference
                 is that on the homepage, all deliverables are sorted by learning outcomes, while this page only contains deliverables for this specific project.
@@ -53,16 +53,13 @@
     <div class="reveal">
         <div class="width">
             <h2 class="guide">THE PROJECT</h2>
-            <p class="desc">This project is based around creating your own portfolio for this semester. The end goal for this project was to have a validated portfolio design, with a setup for development, which acts as a stepping stone. 
-              For this setup of development, future projects can easily be added with the same process.</p>
+            <p class="desc">The group project is based around Grip On Sound. Grip on Sound is a project within FHICT where multiple project groups work on separate parts. Grip On Sound is creating a smartwatch and smartphone app for physical education teachers of primarily primary schools in the Netherlands. </p>
               <div class="column">
                 <p class="company">
-                    At the end of the semester, the portfolio acts as the big piece of evidence for the work of the semester. By starting working on the portfolio at early stages of the semester is a great opportunity to learn, while also
-                    documenting the work that is being done.
+                  Physical education lessons are usually very loud, and physical education teachers are exposed to these loud noises throughout the day. This makes the possibility of hearing damage high. Hence the opportunity was taken to create a smartwatch and smartphone app to raise awareness on sound levels.
                 </p>
                 <p class="company">
-                    The portfolio consists mainly of three projects, from which this is one. The target audience for the portfolio are mainly teachers and/or assessors, but the portfolio could also be used to present to other students, or for finding
-                    future jobs.
+                  For the group project, a total of six students including me have been assigned to create the design of the smartphone app. This meant that the end product was a functional prototype of the smartphone app, with complete branding, and most importantly validation. 
                 </p>
             </div>
             <hr>
@@ -73,52 +70,56 @@
             <h2 class="guide">PROCESS</h2>
             <h3 class="subtitle">Approach</h3>
             <p class="desc">
-              The duration of the project was three weeks. During these three weeks I have had weekly meetings with my semester coach, Bardt, who also happens to be the most prominent stakeholder. These meetings were mainly update meetings. However, some occasions also demanded to be used
-              for an expert interview, and as user research. Since Bardt is the main assessor, it is very useful to make us of this in order to get valuable feedback.
+              The duration of the project was twelve weeks. During these twelve weeks, the group has worked in a total of six sprints. Every sprint a new SCRUM master was assigned. This was done to give everybody equal opportunities to take the lead in the group, and keep track of the progress.
             </p>
             <div class="column">
               <p class="company">
-                During my third-year internship. I started working with the SCRUM way of working. During this internship period I was working alone, and this way of working suited me very well. This is the reason why during this individual project I have also worked with SCRUM.
+                During my third-year internship. I started working with the SCRUM way of working. During this internship period I was working alone, and this way of working suited me very well. This however was different: there was a group which meant that everyone was picking up tasks and simultaneously working on different things.
               </p>
               <p class="company">
-                I have worked in sprints of one week, which meant that there was a total of three sprints. After each weak, I had to have finished specific tasks from the backlog, and this is when I had update meetings with Bardt where we disccused my progress.
+                Every Wednesday, a stand-up meeting was held by the Grip on Sound team. Two to three group members attended these stand-ups to give updates about the project each time. I took the initiative to attend the majority of these stand-ups. Once every two weeks, there was a meeting with the direct stakeholder, Dennis, after the stand-up.
               </p>
             </div>
             <p class="desc">
-              Initially, I had planned out each project phase to last one week. Of course, a project as this will always be an iterative process, which meant that at some moments, I was working on multiple phases simultaneously. An example for this is: after having a design ready, user research
-              was still necessary to either iterate or validate the design concept. This was also the main reason why the eventual development phase did not receive as much as attention as originally intended. This meant that the end result was satisfactory, but not to the extent as I had wished.
+              In these meetings, the group would go more in-depth on the work and show progress. Besides only these meetings with the stakeholder, there were several meetings where specific topics were discusses. These were for example the requirements of the smartphone app. Besides our stakeholder, we also had our coach to help out and give advice where needed.
+            </p>
+            <p class="desc">
+              After each sprint, the group held a retrospective and the role of SCRUM master was passed along. During these retrospectives, the SCRUM board is evaluated and updated where needed, and the group productivity was discussed. Based on these results, improvement points were made which helped the group move forward in future sprints.
             </p>
             <h3 class="subtitle">Execution</h3>
             <p class="desc">
-              I started this project by setting up the project plan. This project plan included the plan of approach, research questions, scope etc. The main research question for this project was as follows:
+              The first sprint of the project started out by setting up diving into previous work that had been done, and setting up a project plan. This project plan included the main approach, and most importantly the main research question:
               <ul class="target-list">
-                <li>How do I present myself as a professional media designer in a clear and structured portfolio?</li>
+                <li>How can we use a smartphone app to give insights to PE teachers on hearing damage caused by loud noises during their lessons?</li>
               </ul>
             </p>
+            <p class="desc">
+              Based on this main question, several sub questions were created, which can be found inside of the project plan. Every group member gave their preference on certain sub questions, which was the first division of tasks that had been made. For me, I mainly focused on the following sub questions:
+              <ul class="target-list">
+                <li>In what way can we visualize data in order to make sure it is insightful for our target audience?</li>
+                <li>What type of data will help the user become completely aware of potential hearing damage?</li>
+                <li>How can we test the UI/UX of the app?</li>
+              </ul>
+            </p>
+            <p class="desc">
+              After having completed the set of research questions, everybody had their tasks to do. The group functioned in a double diamond way of working, while keeping fluctuation into consideration. The expectation was that multiple phases would crossover. After wrapping up the first sprint, the second sprint consisted mainly of conducting some forms of research on the users needs, after which the group quickly headed into the designing phase. 
+            </p>
+            <p class="desc">
+              These were at first mainly sketches and wireframes of rough ideas. After this, the corporate identity was created, and functionalities were being worked out into the wireframes. While the corporate identity was being created, I was mainly focused on learning more about user research methods, and finding applicable methods for the eventual testing and validation of the app.
+            </p>
+            <p class="desc">
+              After wrapping up the wireframes and corporate identity, final decisions were made on functionalities we were keeping in the app. Eventually, we ended up with four main functionalities in the app. These were the daily dose, insights, calendar and content page.
+            </p>
             <div class="column">
               <p class="company">
-                Based on this main question, I had set up several sub questions, which can be found inside of the project plan. 
-              </p>
-            </div>
-            <p class="desc">
-              After receiving feedback from Bardt on my research questions, it was time to start the actual research phase. One of my sub questions was about using a front-end framework for the creation of my portfolio. I started by conducting secondary research, which mainly consisted out of desk research.
-              The results from this research were very broad, which did not allow me to draw a concrete answer to my research question. This meant that I had to do some form of primary research to gather some qualitative insights.
-            </p>
-            <p class="desc">
-              I had an expert interview with Bardt. Since Bardt is a front-end architect, he has enough experience to advise me in the use of a front-end framework, which also helped me to draw my final conclusion on the research question.
-            </p>
-            <p class="desc">
-              After having answered several sub questions, it was time to start on creating the structure of my portfolio. This consisted of creating wireframes in a quick succession. After this, I had a clear view of the structure I wanted to accomplish with the portfolio.
-              This meant that I could quickly receive peer feedback on the portfolio structure, and in no-time I was started on the design.
-            </p>
-            <div class="column">
-              <p class="company">
-                The designing phase took longer than expected, which is not particularly a bad thing, because I could get plenty of user insights with the help of the research plan I set up, especially dedicated for gathering thoughts on the user experience of my portfolio.
+                When everybody was clear on what the intended outcome of the designs was going to be, everyone started working in pairs on the design. For me, I was working together with Julien. We split tasks of the pages and ended up with our final set of mock-ups.
               </p>
               <p class="company">
-                After receiving valuable insights, I started developing. The remaining time to work on development was limited, which caused me to only have worked on the homepage of the portfolio. Of course, this is not the end of the world, since I had the whole semester to keep working on it.
+                After everyone completed their designs, final decisions were made on what design aspects were going to be taken into accountability for the final prototype. I was glad to see that many functions of my calendar page were taken by the group, since this is where my focus was the most.
               </p>
             </div>
+            <p class="desc">The designs were put together in a final prototype, which meant that the product was ready for the testing phase. I had previously done research on user research methods, but no clear idea on what needed to be tested was justified. This was something the group looked at together. Based on what needed to be tested, suitable research methods were chosen and worked out.</p>
+            <p class="desc">This ended up in a user research plan, which was eventually conducted with users to validate the final product. Besides the final product, I have also worked on proof of concepts of specific functionalities of the app.</p>
             <hr>
         </div>
     </div>
@@ -126,15 +127,15 @@
         <div class="width">
             <h2 class="guide">REFLECTION & EVALUATION</h2>
             <p class="desc">
-              During this individual project, I have learned several things. These learning points mainly pointed towards making crucial decisions in a short time period.
-              Because the project basically contained all phases a project usually has, while only having a relatively short time span, it demanded me to make crucial decisions
-              at moments when it was really needed. Here are some learning points I am taking with me in the future projects, and during my graduation:
+              During the group project, I have learned several things. The main thing is working with SCRUM in a group manner. I had never done this before, and since having a clear understanding on SCRUM, I was glad to apply my knowledge within the group, but there were still things I did not know about working a group manner.
+            </p>
+            <p class="desc">
+              Furthermore, I have learned that the task of being a SCRUM master requires a lot of initiative, which was not something I was used to, but glad to have experienced. I have also worked on some development for the proof of concepts of this project. This was also in a group manner which helped me learn more about version management in group projects. In short, these are my learning points:
               <ul class="target-list">
-                <li>Making crucial decision when it is needed for the design and the research questions.
-                </li>
-                <li>Making sure that the methods that I choose for the user research plan are useful, and do not go to waste.
-                </li>
-              </ul>
+                <li>Working with SCRUM in a group manner.</li>
+                <li>Communication within the group and with stakeholders.</li>
+                <li>Version management with multiple group members.</li>
+              </ul> 
             </p>
             <hr>
         </div>
