--- a/homepage.html
+++ b/homepage.html
@@ -235,19 +235,19 @@
                     <h1 class="projectname">Individual Project</h1>
                     </section>
                 </div>
-                <div class="project" style="cursor: pointer;">
+                <div onclick="window.open('group.html')" class="project" style="cursor: pointer;">
                     <img src="./images/hongkong.jpg" alt="" class="grid-img">
                     <section class="project-info">
                         <h1 class="projectname">Group Project</h1>
                     </section>                        
                 </div>
-                <div class="project" style="cursor: pointer;">
+                <div onclick="window.open('international.html')" class="project" style="cursor: pointer;">
                     <img src="./images/hongkong.jpg" alt="" class="grid-img">
                     <section class="project-info">
                         <h1 class="projectname">International Project</h1>
                     </section>                        
                 </div>
-                <div class="project" style="cursor: pointer;">
+                <div onclick="window.open('personal.html')" class="project" style="cursor: pointer;">
                     <img src="./images/hongkong.jpg" alt="" class="grid-img">
                     <section class="project-info">
                         <h1 class="projectname">Personal Project</h1>
