--- a/international.html
+++ b/international.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Individual Project</title>
+  <title>International Project</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <link rel="icon" href="./images/LogoTijn.png">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -36,7 +36,7 @@
   <main class="product-main">
     <section id="welcome" class="product-intro">
       <h1 class="product-heading">INTERNATIONAL PROJECT</h1>
-      <p class="product-text">Page containing all content related to the individual project, which has been carried out during the first three weeks of the semester.</p>
+      <p class="product-text">Page containing all content related to the international project, which has been carried out during the Dutch Design Week and Malaga trip.</p>
     </section>
   </main>
   <main class="lees">
