--- a/personal.html
+++ b/personal.html
@@ -43,7 +43,7 @@
         <div class="width">
             <h2 class="guide-title">READING GUIDE</h2>
             <p class="desc">
-                Welcome to the reading guide of the individual project for this semester! In this reading guide, various topics will be discussed, including the project, process, reflection and evaluation.
+                Welcome to the reading guide of the personal project for this semester! In this reading guide, various topics will be discussed, including the starting phase of this project. The project is still in progress, but a start was made during the end of this semster.
                 At the bottom of this reading guide, you will find a proof section containing all deliverables related to this project. These deliverables have certain learning outcomes attached to them, which
                 are visisble when hovering over said deliverables. The deliverables from this project, and all other projects are also directly accessible from the competence table on the homepage. The difference
                 is that on the homepage, all deliverables are sorted by learning outcomes, while this page only contains deliverables for this specific project.
@@ -53,16 +53,13 @@
     <div class="reveal">
         <div class="width">
             <h2 class="guide">THE PROJECT</h2>
-            <p class="desc">This project is based around creating your own portfolio for this semester. The end goal for this project was to have a validated portfolio design, with a setup for development, which acts as a stepping stone. 
-              For this setup of development, future projects can easily be added with the same process.</p>
+            <p class="desc">This project is based around personal learning goals. During the individual project, a start on front-end framework research was done. I thought it would be a good idea to apply this further into a personal project.</p>
               <div class="column">
                 <p class="company">
-                    At the end of the semester, the portfolio acts as the big piece of evidence for the work of the semester. By starting working on the portfolio at early stages of the semester is a great opportunity to learn, while also
-                    documenting the work that is being done.
+                    My mother owns an acupuncture company, and the website is really outdated. After being asked to revamp the website, I had the idea that I could start learning a front-end framework simultaneously with this.
                 </p>
                 <p class="company">
-                    The portfolio consists mainly of three projects, from which this is one. The target audience for the portfolio are mainly teachers and/or assessors, but the portfolio could also be used to present to other students, or for finding
-                    future jobs.
+                    The website is pure front-end, and acts as an invitation card to customers, which means that there is no back-end attached to the website. This meant that I could fully immerse into the front-end framework, and build something fresh and new. 
                 </p>
             </div>
             <hr>
@@ -73,52 +70,23 @@
             <h2 class="guide">PROCESS</h2>
             <h3 class="subtitle">Approach</h3>
             <p class="desc">
-              The duration of the project was three weeks. During these three weeks I have had weekly meetings with my semester coach, Bardt, who also happens to be the most prominent stakeholder. These meetings were mainly update meetings. However, some occasions also demanded to be used
-              for an expert interview, and as user research. Since Bardt is the main assessor, it is very useful to make us of this in order to get valuable feedback.
+              The current website is outdated, but the information is still valid. This means that I could use the information architecture that is currently existent in website, and apply this to my revamped design.
             </p>
             <div class="column">
               <p class="company">
-                During my third-year internship. I started working with the SCRUM way of working. During this internship period I was working alone, and this way of working suited me very well. This is the reason why during this individual project I have also worked with SCRUM.
+                Everything else was open for interpretation for me, as long as the new website had a "modern" feel. 
               </p>
               <p class="company">
-                I have worked in sprints of one week, which meant that there was a total of three sprints. After each weak, I had to have finished specific tasks from the backlog, and this is when I had update meetings with Bardt where we disccused my progress.
+                This meant that I could fully go out in the design part as well, but I had to keep in consideration that what I designed, is also technically reachable.
               </p>
             </div>
-            <p class="desc">
-              Initially, I had planned out each project phase to last one week. Of course, a project as this will always be an iterative process, which meant that at some moments, I was working on multiple phases simultaneously. An example for this is: after having a design ready, user research
-              was still necessary to either iterate or validate the design concept. This was also the main reason why the eventual development phase did not receive as much as attention as originally intended. This meant that the end result was satisfactory, but not to the extent as I had wished.
-            </p>
             <h3 class="subtitle">Execution</h3>
             <p class="desc">
-              I started this project by setting up the project plan. This project plan included the plan of approach, research questions, scope etc. The main research question for this project was as follows:
+              For this project I had set up one main research question:
               <ul class="target-list">
-                <li>How do I present myself as a professional media designer in a clear and structured portfolio?</li>
+                <li>How do create a modernized website for my mothers company with the help of a front-end framework?</li>
               </ul>
             </p>
-            <div class="column">
-              <p class="company">
-                Based on this main question, I had set up several sub questions, which can be found inside of the project plan. 
-              </p>
-            </div>
-            <p class="desc">
-              After receiving feedback from Bardt on my research questions, it was time to start the actual research phase. One of my sub questions was about using a front-end framework for the creation of my portfolio. I started by conducting secondary research, which mainly consisted out of desk research.
-              The results from this research were very broad, which did not allow me to draw a concrete answer to my research question. This meant that I had to do some form of primary research to gather some qualitative insights.
-            </p>
-            <p class="desc">
-              I had an expert interview with Bardt. Since Bardt is a front-end architect, he has enough experience to advise me in the use of a front-end framework, which also helped me to draw my final conclusion on the research question.
-            </p>
-            <p class="desc">
-              After having answered several sub questions, it was time to start on creating the structure of my portfolio. This consisted of creating wireframes in a quick succession. After this, I had a clear view of the structure I wanted to accomplish with the portfolio.
-              This meant that I could quickly receive peer feedback on the portfolio structure, and in no-time I was started on the design.
-            </p>
-            <div class="column">
-              <p class="company">
-                The designing phase took longer than expected, which is not particularly a bad thing, because I could get plenty of user insights with the help of the research plan I set up, especially dedicated for gathering thoughts on the user experience of my portfolio.
-              </p>
-              <p class="company">
-                After receiving valuable insights, I started developing. The remaining time to work on development was limited, which caused me to only have worked on the homepage of the portfolio. Of course, this is not the end of the world, since I had the whole semester to keep working on it.
-              </p>
-            </div>
             <hr>
         </div>
     </div>
@@ -126,15 +94,7 @@
         <div class="width">
             <h2 class="guide">REFLECTION & EVALUATION</h2>
             <p class="desc">
-              During this individual project, I have learned several things. These learning points mainly pointed towards making crucial decisions in a short time period.
-              Because the project basically contained all phases a project usually has, while only having a relatively short time span, it demanded me to make crucial decisions
-              at moments when it was really needed. Here are some learning points I am taking with me in the future projects, and during my graduation:
-              <ul class="target-list">
-                <li>Making crucial decision when it is needed for the design and the research questions.
-                </li>
-                <li>Making sure that the methods that I choose for the user research plan are useful, and do not go to waste.
-                </li>
-              </ul>
+              The personal project is still a work-in-progress, but 
             </p>
             <hr>
         </div>
