--- a/homepage.html
+++ b/homepage.html
@@ -139,7 +139,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable1.html" target="_blank" rel="noopener noreferrer">Group Project: Personas</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable2.html" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Working With Vue</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Personal Website</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -165,7 +165,8 @@
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable5.html" target="_blank" rel="noopener noreferrer">Group Project: Proof Of Concepts</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Working With Vue</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Personal Website</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: UML Class Diagram Personal Website</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -203,7 +204,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable9.html" target="_blank" rel="noopener noreferrer">Group Project: Methods and Tooling</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable10.html" target="_blank" rel="noopener noreferrer">Group Project: Update Presentation</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Working With Vue</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Personal Website</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
                             </ul>
                         </td>
