--- a/homepage.html
+++ b/homepage.html
@@ -231,13 +231,13 @@
         <div class="reveal">
             <div class="containerproject" >
                 <div onclick="window.open('individual.html')" class="project" style="cursor: pointer;">
-                    <img src="./images/hongkong.jpg" alt="" class="grid-img">
+                    <img src="./images/individual.png" alt="" class="grid-img">
                     <section class="project-info">
                     <h1 class="projectname">Individual Project</h1>
                     </section>
                 </div>
                 <div onclick="window.open('group.html')" class="project" style="cursor: pointer;">
-                    <img src="./images/hongkong.jpg" alt="" class="grid-img">
+                    <img src="./images/cover.png" alt="" class="grid-img">
                     <section class="project-info">
                         <h1 class="projectname">Group Project</h1>
                     </section>                        
