--- a/individualdeliverable1.html
+++ b/individualdeliverable1.html
@@ -36,6 +36,10 @@
       <h2 class="guide">INTRO</h2>
           <p class="desc">
               This deliverable page presents a summary of the user research plan which has been conducted with users of the portfolio. The page gives a summary of the process which has been taken, from setting up goals to execution. It is suggested to read through this summary first for a better understanding, after which to use the button at the bottom of the page to refer to as the actual proof document.
+              The linked research question to this deliverable is:
+              <ul class="target-list">
+                <li>Hoe kan ik een gebruiksvriendelijke portfolio opstellen, waardoor de gebruiker niet zelf naar informatie hoeft te zoeken?</li>
+              </ul>
           </p>
       <hr class="version">
   </div>
