--- a/individualdeliverable2.html
+++ b/individualdeliverable2.html
@@ -36,6 +36,12 @@
         <h2 class="guide">INTRO</h2>
         <p class="desc">
             This deliverable page presents the documentation of the wireframing and designing process of the portfolio. After having answered several sub-questions, it was time to start structuring the portfolio. I started doing this by creating wireframes in a quick succession.
+            The linked research questions to this deliverable are:
+            <ul class="target-list">
+              <li>Hoe wil ik mezelf presenteren als media designer in mijn portfolio?</li>
+              <li>Hoe ga ik mijn expertise in media design duidelijk naar voren brengen in mijn portfolio?</li>
+              <li>Hoe kan ik een gebruiksvriendelijke portfolio opstellen, waardoor de gebruiker niet zelf naar informatie hoeft te zoeken?</li>
+            </ul>
         </p>
       <hr class="version">
     </div>
