--- a/individualdeliverable4.html
+++ b/individualdeliverable4.html
@@ -36,6 +36,10 @@
       <h2 class="guide">INTRO</h2>
           <p class="desc">
               This deliverable page presents a summary of the front-end framework research that has been done. The process of approach, and the main results and conclusions will be discussed. At the bottom of the page you can find a button which directs towards the full research document. It is suggested to read through the summary first, after which the research document can be used as the official proof.
+              The linked research question to this deliverable is:
+              <ul class="target-list">
+                <li>Hoe kan het leren van een framework helpen bij het gemakkelijker opstellen van een portfolio?</li>
+              </ul>
           </p>
       <hr class="version">
     </div>
