--- a/individualdeliverable5.html
+++ b/individualdeliverable5.html
@@ -35,6 +35,12 @@
     <div class="width">
         <h2 class="guide">JUDGEMENT & COMMUNICATION</h2>
             <p class="desc">
+              The linked research question to this deliverable is:
+              <ul class="target-list">
+                <li>In welk vakgebied ligt mijn expertise als media designer?</li>
+              </ul>
+            </p>
+            <p class="desc">
               With the help of communicating with my semestercoach, and with fellow students during this semester, I have worked towards a solid start to my portfolio for this semester. I held weekly meetings with Bardt, where we discusses plenty of things related to the project. Eventually, I had solidly defined my research questions, and fortunately I have been able to answer all of them.
             </p>
             <p class="desc">
