--- a/homepage.html
+++ b/homepage.html
@@ -139,7 +139,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable1.html" target="_blank" rel="noopener noreferrer">Group Project: Personas</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable2.html" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Personal Website</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Requirements Personal Website</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -153,6 +153,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable3.html" target="_blank" rel="noopener noreferrer">Group Project: Research Methods Research</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable2.html" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Design Process Personal Website</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -165,7 +166,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable5.html" target="_blank" rel="noopener noreferrer">Group Project: Proof Of Concepts</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Personal Website</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Design Process Personal Website</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: UML Class Diagram Personal Website</a></li>
                             </ul>
                         </td>
@@ -178,6 +179,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable7.html" target="_blank" rel="noopener noreferrer">Group Project: Project Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable6.html" target="_blank" rel="noopener noreferrer">Group Project: The SCRUM Master</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Requirements Personal Website</a></li>
                             </ul>
                         </td>
                     </tr>
